Simplified frontend with single WhatsApp button linking to +18667972610

--- a/index.html
+++ b/index.html
@@ -553,128 +553,14 @@
                 Leveraging a network of 50,000+ founders, VCs, and executives to create 
                 warm introductions that actually convert. Let's accelerate your growth together.
             </p>
+            
+            <!-- WhatsApp CTA Button -->
+            <div style="margin-top: 3rem;">
+                <a href="#" class="cta-button cta-primary pulse" onclick="startWhatsAppChat()" style="font-size: 1.3rem; padding: 1.2rem 3rem;">
+                    <span>💬</span> Talk on WhatsApp
+                </a>
+            </div>
         </header>
-
-        <!-- Hero Section -->
-        <section class="hero">
-            <div class="hero-card">
-                <h2 style="font-size: 2.5rem; margin-bottom: 1rem; font-weight: 700;">
-                    The Right Introduction Can Change Everything
-                </h2>
-                <p style="font-size: 1.2rem; color: var(--text-secondary); margin-bottom: 2rem;">
-                    I'm not just another AI assistant. I'm your strategic partner in building 
-                    meaningful professional relationships that drive real business outcomes.
-                </p>
-
-                <!-- Stats -->
-                <div class="stats-container">
-                    <div class="stat">
-                        <span class="stat-number" data-target="50000">50K+</span>
-                        <span class="stat-label">Network Size</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number" data-target="120000">120K+</span>
-                        <span class="stat-label">Intros Made</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number" data-target="25">$25M+</span>
-                        <span class="stat-label">Deals Closed</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number" data-target="85">85%</span>
-                        <span class="stat-label">Success Rate</span>
-                    </div>
-                </div>
-
-                <!-- CTA Buttons -->
-                <div class="cta-container">
-                    <a href="#" class="cta-button cta-primary pulse" onclick="startWhatsAppChat()">
-                        <span>💬</span> Start on WhatsApp
-                    </a>
-                    <a href="#" class="cta-button cta-secondary" onclick="scheduleCall()">
-                        <span>📞</span> Schedule a Call
-                    </a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Features -->
-        <section class="features">
-            <div class="feature-card">
-                <span class="feature-icon">🎯</span>
-                <h3 class="feature-title">Targeted Connections</h3>
-                <p class="feature-description">
-                    I don't just connect randomly. Every introduction is strategic, 
-                    tailored to your specific goals and requirements.
-                </p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-icon">🚀</span>
-                <h3 class="feature-title">Fast Results</h3>
-                <p class="feature-description">
-                    Most connections happen within 48 hours. No more waiting weeks 
-                    for that crucial introduction.
-                </p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-icon">🤝</span>
-                <h3 class="feature-title">Warm Intros Only</h3>
-                <p class="feature-description">
-                    Every introduction comes with context and a personal touch, 
-                    dramatically increasing your success rate.
-                </p>
-            </div>
-            <div class="feature-card">
-                <span class="feature-icon">🔒</span>
-                <h3 class="feature-title">Completely Confidential</h3>
-                <p class="feature-description">
-                    Your information is secure and only shared with your explicit 
-                    permission for specific introductions.
-                </p>
-            </div>
-        </section>
-    </div>
-
-    <!-- Logo Banner -->
-    <div class="logo-banner-container">
-        <p class="logo-banner-header">Trusted by Leaders From</p>
-        <div class="logo-banner">
-            <div class="logo-track">
-                <!-- First set of logos -->
-                <span class="partner-logo">Y Combinator</span>
-                <span class="partner-logo">Character.VC</span>
-                <span class="partner-logo">ISRO</span>
-                <span class="partner-logo">IIM Ahmedabad</span>
-                <span class="partner-logo">IIM Bangalore</span>
-                <span class="partner-logo">Palantir</span>
-                <span class="partner-logo">Apple</span>
-                <span class="partner-logo">Google</span>
-                <span class="partner-logo">IIM Indore</span>
-                <span class="partner-logo">ISB</span>
-                <span class="partner-logo">Harvard Business School</span>
-                <span class="partner-logo">Stanford</span>
-                <span class="partner-logo">UC Berkeley</span>
-                <!-- Duplicate set for seamless scrolling -->
-                <span class="partner-logo">Y Combinator</span>
-                <span class="partner-logo">Character.VC</span>
-                <span class="partner-logo">ISRO</span>
-                <span class="partner-logo">IIM Ahmedabad</span>
-                <span class="partner-logo">IIM Bangalore</span>
-                <span class="partner-logo">Palantir</span>
-                <span class="partner-logo">Apple</span>
-                <span class="partner-logo">Google</span>
-                <span class="partner-logo">IIM Indore</span>
-                <span class="partner-logo">ISB</span>
-                <span class="partner-logo">Harvard Business School</span>
-                <span class="partner-logo">Stanford</span>
-                <span class="partner-logo">UC Berkeley</span>
-            </div>
-        </div>
-    </div>
-
-    <!-- WhatsApp Floating Button -->
-    <div class="whatsapp-float" onclick="startWhatsAppChat()">
-        <span>💬</span>
     </div>
 
     <script>
@@ -719,15 +605,15 @@
 
         // WhatsApp integration
         function startWhatsAppChat() {
-            // Replace with your actual WhatsApp number
-            const phoneNumber = '918881888818';
+            // WhatsApp number: +1 (866) 797-2610
+            const phoneNumber = '18667972610';
             const message = encodeURIComponent("Hi Eli! I'm looking to expand my professional network. Can you help me connect with the right people?");
             window.open(`https://wa.me/${phoneNumber}?text=${message}`, '_blank');
         }
 
         // Schedule call function
         function scheduleCall() {
-            const phoneNumber = '918881888818';
+            const phoneNumber = '18667972610';
             const message = encodeURIComponent("Hi Eli! I'd like to schedule a call to discuss my networking goals. Please call me when available.");
             window.open(`https://wa.me/${phoneNumber}?text=${message}`, '_blank');
         }
